dev/scss/layout.scss
// Environment Only - No Content Styling

$header_height: 40px;

$gutter:    16px;
$gutter_lg: 24px;

.inner-wrapper {
  padding: 0 $gutter;
  width: 100%;
}
@media #{$mq_md} {
  .inner-wrapper--at-md {
    padding: 0 $gutter;
    width: 100%;
  }
}
@media #{$mq_lg} {
  .inner-wrapper,
  .inner-wrapper--at-md,
  .inner-wrapper--at-lg {
    @extend .bezel--horizontal--at-lg;
    margin: 0 auto;
    max-width: 1056px;
    padding: 0 $gutter_lg;
  }
  .inner-wrapper--at-lg {
    width: 100%;
  }
}

// Anchor Links Accommodate Fixed Header
[id^="a_"] {
  scroll-margin-top: $header_height + 8;
}

.grainy {
// https://grainy-gradients.vercel.app/
  background:
    linear-gradient(320deg, rgba($c_grey30,1), rgba($c_dark-base,1)),
    url("data:image/svg+xml,%3Csvg viewBox='0 0 375 375' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.75' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
}
.bezel,
.bezel--vertical,
.bezel--horizontal {
  border-bottom-color: $c_grey50;
  border-left-color: $c_light20;
  border-right-color: $c_grey50;
  border-style: solid;
  border-top-color: $c_light20;
}
@media #{$mq_lg} {
  .bezel--horizontal--at-lg {
    border-bottom-color: $c_grey50;
    border-left-color: $c_light20;
    border-right-color: $c_grey50;
    border-style: solid;
    border-top-color: $c_light20;
  }
}
.bezel {
  border-width: 1px;
}
.bezel--vertical {
  border-width: 1px 0;
}
.bezel--horizontal {
  border-width: 0 1px;
}

.total-wrapper {
  background-color: $c_dark-base;
  min-width: $bp_min;
  position: relative;
}

.site-header {
  // Above-the-fold and nav elements should be considered for critical css
  backface-visibility: hidden; // fixed position fix for old mobile browsers
  position: fixed;
  width: 100vw;
  z-index: 1;

  .inner-wrapper {
    align-items: stretch;
    display: flex;
    padding-left: 0;
    padding-right: 0;
  }
  > section > .inner-wrapper {
    background: linear-gradient(320deg, rgba($c_grey20,0.625), rgba($c_dark-base,0.625));
  }

  &-primary {
    &:hover {
      @extend .grainy;
    }
    .inner-wrapper {
      height: $header_height;
    }
  }
  &-secondary {
    @extend .bezel--horizontal; // compensate for bezel on primary header for easy horizontal alignment
    display: none; // show with JS
    .inner-wrapper {
      @extend .f_smaller;
      display: flex;
      height: 30px;
      justify-content: space-between;
    }
    a {
      align-items: center;
      display: flex;
      height: 100%;
      min-width: 40px;
      padding: 4px;
    }
    .title {
      flex-grow: 1;
      overflow-x: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  .header-logo {
    @extend .bezel;
    flex-grow: 1;
    svg {
      height: 150%; // let the y dangle over
      z-index: 2;
      path {
        fill: $c_link;
      }
    }
    a {
      display: block;
      height: 100%;
      padding: 4px;
      @media #{$mq_sm2} {
        padding-left: $gutter;
      }
      @media #{$mq_lg} {
        padding-left: $gutter_lg;
      }
      width: fit-content;
      &:hover {
        svg path {
          fill: $c_hover;
        }
      }
    }
  }

  .header-nav {
    > div {
      height: 100%;
    }
    ul {
      display: flex;
      height: 100%;
      list-style: none;
      li {
        align-items: stretch;
        display: flex;
        margin: 0;
        a {
          @extend .bezel;
          align-items: center;
          display: flex;
          padding: 0 8px;
          @media #{$mq_sm2} {
            padding: 0 $gutter;
          }
          @media #{$mq_lg} {
            padding: 0 $gutter_lg;
          }
          &:hover {
            @extend .grainy;
          }
        }
      }
    }
  }

  .header-search {
    @extend .bezel;
    padding: 0 4px 0 8px;
    @media #{$mq_sm2} {
      padding: 0 $gutter;
    }
    @media #{$mq_lg} {
      padding: 0 $gutter_lg;
    }
    &:hover,
    &:focus-within {
      @extend .grainy;
    }
    .search-container {
      height: 100%;
      label {
        padding: 6px 0;
      }
    }
  }

}

.site-footer {
  @extend .bezel--vertical;
  @extend .grainy;

  .inner-wrapper {
    align-items: stretch;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    section {
      padding: 4px 0;
    }
    .site-footer-text {
      @extend .f_smallest;
    }

    @media #{$mq_md} {
      flex-wrap: nowrap;
      .site-footer-text {
        display: inline-block;
        margin-top: 5px;
      }
    }

  }

  .follow-container {
    width: 100%;
    @media #{$mq_md} {
      width: auto;
    }
    ul {
      display: flex;
      justify-content: center;
      @media #{$mq_md} {
        justify-content: flex-end;
      }
      list-style: none;
      li {
        margin: 0;
        a {
          font-size: 24px;
        }
      }
    }
  }

}

